update bash script to behave more like a bash script
Signed-off-by: Karl Hepworth <karl.hepworth@gmail.com>

--- a/templates/pyenv.j2
+++ b/templates/pyenv.j2
@@ -1,5 +1,7 @@
 #!/usr/bin/env bash
 
-eval $({{ fubarhouse_user_dir }}/{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} init -);
+PYENV="{{ fubarhouse_user_dir }}/{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }}";
 
-{{ fubarhouse_user_dir }}/{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} $@;
+eval $($PYENV init -);
+$PYENV $@;
+
