--- a/templates/pyenv.j2
+++ b/templates/pyenv.j2
@@ -2,11 +2,14 @@
 
 PYENV="{{ fubarhouse_user_dir }}/{{ fubarhouse_python.main_dir }}/libexec/{{ fubarhouse_python.main_exec }}";
 
-if [[ -n $(cat ~/.profile | grep "pyenv init -") ]]; then
-  echo;
-else
-  echo 'eval "$(${PYENV} init -)"' >> ~/.bash_profile
-fi
+PROFILES=(".profile" ".bashrc" ".bash_profile");
+for PROFILE in "${PROFILES[@]}"; do
+  if [[ -n $(cat "$HOME/${PROFILE}" | grep "pyenv init -") ]]; then
+    echo;
+  else
+    echo 'eval "$(${PYENV} init -)"' >> ~/"${PROFILE}";
+  fi
+done
 
 $PYENV $@;
 
