--- a/templates/pyenv.j2
+++ b/templates/pyenv.j2
@@ -4,10 +4,13 @@ PYENV="{{ fubarhouse_user_dir }}/{{ fubarhouse_python.main_dir }}/libexec/{{ fub
 
 PROFILES=(".profile" ".bashrc" ".bash_profile");
 for PROFILE in "${PROFILES[@]}"; do
-  if [[ -n $(cat "$HOME/${PROFILE}" | grep "pyenv init -") ]]; then
-    echo;
-  else
-    echo 'eval "$(${PYENV} init -)"' >> ~/"${PROFILE}";
+  if [[ -a "${PROFILE}" ]]; then
+    if [[ -n $(cat "$HOME/${PROFILE}" | grep "pyenv init -") ]]; then
+      echo -n;
+    else
+      echo 'eval "$(${PYENV} init -)"' >> ~/"${PROFILE}";
+    fi
+    source "${PROFILE}";
   fi
 done
 
